# CPP-BIGDATA-EXCEL

./: .gitignore  CMakeLists.txt
ReadEvoluciones/: main.cpp
ReadEvoluciones/Sources/: archivos.cpp  csv_reader.cpp  diccionario.cpp  excel_reader.cpp  limpieza.cpp
ReadEvoluciones/Sources/Utilities/: REUtilities.h  dictionary.h
